# notae

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  README.md  org.kde.notae.desktop  org.kde.notae.json  org.kde.notae.metainfo.xml
.reuse/: dep5
po/ar/: notae.po
po/ca/: notae.po
po/ca@valencia/: notae.po
po/cs/: notae.po
po/de/: notae.po
po/en_GB/: notae.po
po/es/: notae.po
po/eu/: notae.po
po/fi/: notae.po
po/fr/: notae.po
po/ga/: notae.po
po/gl/: notae.po
po/he/: notae.po
po/hi/: notae.po
po/hu/: notae.po
po/ia/: notae.po
po/it/: notae.po
po/ka/: notae.po
po/ko/: notae.po
po/lt/: notae.po
po/lv/: notae.po
po/nl/: notae.po
po/pl/: notae.po
po/pt_BR/: notae.po
po/sa/: notae.po
po/sk/: notae.po
po/sl/: notae.po
po/sv/: notae.po
po/tr/: notae.po
po/uk/: notae.po
po/zh_CN/: notae.po
po/zh_TW/: notae.po
src/: CMakeLists.txt  about.cpp  about.h  app.cpp  app.h  config.kcfg  config.kcfgc  documenthandler.cpp  documenthandler.h  filecontroller.cpp  filecontroller.h  main.cpp  resources.qrc
src/ui/: About.qml  GlobalMenu.qml  Main.qml  PageHeader.qml  SettingsPage.qml  TextEditor.qml  WelcomePage.qml  main.qml
